<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    android:id="@+id/net_setting_lan_dial_view" style="@style/LanLayout"
    android:background="@android:color/transparent" android:visibility="invisible">

    <com.gowarrior.settinglibrary.UnityEditText
        android:id="@+id/net_setting_lan_dial_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:background="@drawable/net_setting_input_bg"
        custom:hint="@string/msg_net_setting_lan_pppoe_account"
        custom:label="@string/label_net_setting_account"
        custom:password="false"
        custom:textColor="@drawable/net_setting_input_color"
        custom:textSize="38sp" />

    <com.gowarrior.settinglibrary.UnityEditText
        android:id="@+id/net_setting_lan_dial_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/net_setting_lan_dial_account"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:background="@drawable/net_setting_input_bg"
        custom:hint="@string/msg_net_setting_lan_pppoe_password"
        custom:label="@string/label_net_setting_password"
        custom:password="true"
        custom:textColor="@drawable/net_setting_input_color"
        custom:textSize="38sp" />

    <TextView
        android:id="@+id/net_setting_lan_pppoe_state"
        style="@style/LanTextMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/net_setting_lan_pppoe_button"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"
        android:textSize="38sp" />

    <Button
        android:id="@+id/net_setting_lan_pppoe_button"
        style="@style/Button1"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:text="@string/label_net_setting_action_dial_connect" />

</RelativeLayout>